@@ -1,3 +1,8 @@
+Mon Jul 21 15:09:03 1997  James C Hu  <jxh@lambada.cs.wustl.edu>
+
+	* server/HTTP_Server.{h,cpp}: Got rid of Solaris specific
+	  debugging code (thr_create, thr_join).
+
 Fri Jul 11 02:15:12 1997  James C Hu  <jxh@lambada.cs.wustl.edu>
 
 	* server/HTTP_Response.cpp: Changes so that the HEADER is not
